--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -308,10 +308,10 @@
  GRAND_DUKE_CONSORT:0 "大公配偶者"
  KING_CONSORT:0 "王配"
  EMPEROR_CONSORT:0 "皇配"
- RECTOR:0 "学長"
- RECTORA:0 "女学長"
- GRAND_RECTOR:0 "大学長"
- GRAND_RECTORA:0 "大女学長"
+ RECTOR:0 "レクトール"
+ RECTORA:0 "レクトーラ"
+ GRAND_RECTOR:0 "大レクトール"
+ GRAND_RECTORA:0 "大レクトーラ"
  GREAT_RECTOR:0 "学区長"
  GREAT_RECTORA:0 "女学区長"
  KEFALIJA:0 "ケファリア"
