--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -719,21 +719,21 @@
  BYZ_justinians_empire_decision_title:0 "ユスティニアヌスの帝国"
  BYZ_justinians_empire_decision_desc:0 "ユスティニアヌス帝の時代に匹敵するほどの国境を回復する行為は、大きな威信となり、来るべき偉大な未来を意味するだろう。それに向かって努力しよう。"
  BYZ_build_hexamilion_wall_decision_title:0 "ヘキサミリオンの防壁の再建"
- BYZ_build_hexamilion_wall_decision_desc:0 "モレアを守る城壁はオスマン帝国によって破壊された。訂正しよう。"
+ BYZ_build_hexamilion_wall_decision_desc:0 "モレアを守る城壁はオスマン帝国によって破壊されている。それを直そう。"
  BYZ_build_theodosian_wall_decision_title:0 "テオドシウスの城壁の修復"
  BYZ_build_theodosian_wall_decision_desc:0 "強大なテオドシウスの城壁が荒れ果てている。コンスタンティノープルが堅固であり続けるなら、このままではいけない。城壁を修復せねばならない。"
  BYZ_bosphorus_toll_decision_title:0 "ボスポラス海峡通行料の引き上げ"
  BYZ_bosphorus_toll_decision_desc:0 "ボスポラス海峡での徴税活動を改善しよう。通行料について、その政策と遂行に改善が見られるだろう。"
  preview_missions_decision_title:0 "分岐ミッションのプレビュー表示"
- preview_missions_decision_desc:0 "現状では、我々はミッションツリーのさまざまな分岐のいずれかを選ぶことができる。賢く選択しよう。"
+ preview_missions_decision_desc:0 "現状では、我々はミッションツリーのさまざまな分岐のいずれかを選ぶことができます。賢く選択しましょう。"
  preview_missions_decision_ct:0 "プレビュー表示できる§Y分岐ミッション§!がある。"
  BYZ_revoke_deteriorating_army_title:0 "軍隊の再建"
  BYZ_revoke_deteriorating_army_desc:0 "ビザンツ軍は何世紀にもわたって衰退の一途をたどってきた。耐え忍び続けるための人的資源はわずかであり、オスマン帝国の侵攻に抵抗しかつての栄光を取り戻す必要がある。"
  BYZ_revoke_exkousseiai_title:0 "ラテン人贔屓の廃止"
  BYZ_revoke_exkousseiai_desc:0 "ラテン商人たちはその抜け目のないやり方によって、わが国の商人たちの犠牲の上に、自分たちのために多くの特権を確保してきた。この状況に終止符を打たねばならない。"
- BYZ_at_least_7_trade_income_tt:0 "少なくとも§Y7.0§!¤以上の§Y交易§!からの収入。"
+ BYZ_at_least_7_trade_income_tt:0 "§Y交易§!からの月間収入が§Y7.0§!¤以上である。"
  BYZ_revoke_union_of_the_churches_title:0 "東西教会の合同の終焉"
- BYZ_revoke_union_of_the_churches_desc:0 "フィレンツェ公会議の後、我々はカトリック教会との同盟を結びました。支持を集めるための手段でしかなかったが、 この行動はコンスタンティノープル市民を大いに動揺させることになった。"
+ BYZ_revoke_union_of_the_churches_desc:0 "フィレンツェ公会議の後、我々はカトリック教会との合同を取り決めた。支持を集めるための手段でしかなかったが、 この行動はコンスタンティノープル市民を大いに動揺させることになった。"
  BYZ_integrate_galata_title:0 "ガラタの統合"
  BYZ_integrate_galata_desc:0 "ガラタとは、金閣湾の北に築かれたジェノヴァの植民地である。1261年のニンファエム条約によって設立されたが、その有用性は失われたため、ジェノヴァ人は追放されなければならない。"
  BYZ_mosaicists_decision_title:0 "ビザンツのモザイク職人の派遣"
@@ -799,13 +799,13 @@
  create_pronoia_title:0 "プロノイアの土地"
  create_pronoia_desc:1 "本当に§Y[From.GetName]§!をプロノイアの土地にしますか？[Root.GetPronoiaInheritanceLaw]\n\n§Yプロノイア§!は§Y[BYZ.GetName]§!と§Y[ROM.GetName]§!のみが使用できる特殊な従属国タイプです。\n\nそれらの国が持つことのできる§Yプロノイア§!の数は§Yプロノイアの上限数§!により制限されます。これは§Yアイデアグループ§!、§Y政府改革§!、および§Y陸軍扶養限界§!の100連隊ごとに得ることができます。 また§Yプロノイア§!は§Y外交関係§!枠を消費しません。\nプロノイアは戦争の手助けをするタイプの従属国です。デフォルトでは、宗主国の陸軍扶養限界を§R-5§!する代わりに、プロノイアは扶養限界を§G10.0%§!、人的資源と水兵を§G20.0%§!得ます。さらに、プロノイアは以下の補正を受けます：\n§G-50.0%§! 連隊コスト\n§G+5000§! 人的資源増加\n§G+50.0%§! 国家人的資源補正\n§R+50.0%§! 中核州作成コスト\n§R-20.0%§! 統治効率\n\n[Root.GetProniaAdvancedTooltip]"
  extra_text_hereditary_proniar:0 "§Y世襲プロノイア§!従属国を併合するためには、まずその国を「§Y相続権の剥奪§!」の外交行動で正規の§Yプロノイア§!にしなければなりません。正規の§Yプロノイア§!になった場合、その従属国は彼らの統治者の死後に継承されます。"
- extra_text_proniar:0 "プロノイアは君主の死後、我々が継承する。"
- create_pronoia_non_inherently:0 " You will not be able to inherit the Territory until you use the '§YRetract Right to Inheritance§!' Diplomatic Action."
+ extra_text_proniar:0 "プロノイアは君主の死後、我々が継承します。"
+ create_pronoia_non_inherently:0 "プロノイアは、外交行動「§Y相続権の剥奪§!」を使用するまで継承することができません。"
  create_pronoia_tooltip:1 "属国の統治権をプロノイアに与え、プロノイアは今後、世襲的に領土を管理します。\nプロノイアは§Y外交関係§!を占有しない属国であり、宗主国の人的資源と水兵に貢献します。プロノイアはまた、併合される代わりに継承されます。"
  release_pronia:0 "プロノイアの解放"
  release_pronia_title:0 "プロノイアの解放"
  release_pronia_desc:0 "§Y[From.GetName]§!のプロノイアを解放しますか？\n威信§R25.00§!を消費します。\n[From.GetLoyaltyHitTooltip]彼らの土地に対するいかなる中核州や請求権も失います。"
- loyalty_opinion_hit:0 "Because they are loyal, their opinion of us will decrease by §R200§!.\n"
+ loyalty_opinion_hit:0 "彼らは忠実なので、彼らの我々に対する評価は§R200§!減少します。\n"
  release_pronia_tooltip:0 "プロノイアとの関係を解消し、我々に対するすべての奉仕から彼らの土地を解放します。"
  make_pronoia_inheritable:0 "相続権の剥奪"
  make_pronoia_inheritable_title:0 "相続権の剥奪"
@@ -1448,7 +1448,7 @@
  court_of_art_and_culture_reform_desc:0 "The entirety of the court and vast parts of the bureaucracy are dedicated to the cultural flourishment of the empire. Where others have to rely on armies, our society relies on the weaving loom to expand our influence."
  unlock_court_of_art_and_culture_reform_tt:0 "Unlock the '§YCourt of Art and Culture§!' government reform."
  mechanic_can_enforce_primary_culture_yes:0 "Can use the '§YForce Primary Culture§!' peace treaty."
- zoroastrian_persian_government_reform:0 "Asha Monarchy"
+ zoroastrian_persian_government_reform:0 "アシャ君主制"
  zoroastrian_persian_government_reform_desc:0 "The King of Kings rules over the government with a well-structured bureaucracy which keeps the balance of the estates and the ruler in check. All these are done with the tenets of Zoroaster in mind."
  cb_spread_the_true_faith:0 "真の信仰の普及"
  cb_spread_the_true_faith_desc:0 "They are misguided infidels who fail to acknowledge the sins of their ways!"
@@ -1488,7 +1488,7 @@
  EST_VAL_QIZILBASH_ON_THE_FIELD_LOY:0 "クズルバシュユニットの使用: §G$VAL$§!"
  EST_VAL_ASWARAN_ON_THE_FIELD: "アスワラーンユニットの使用: §Y$VAL$%§!"
  EST_VAL_ASWARAN_ON_THE_FIELD_LOY: "アスワラーンユニットの使用: §G$VAL$§!"
- estate_ghulams:1 "Ghilman"
+ estate_ghulams:1 "グラーム"
  country_estate_ghulams_name:1 "[This.GetGhilmanName]"
  estate_ghulams_desc:1 "The Ghilman are a unit of military slaves with Caucasian origins. Usually, former Christians, the Ghilman undergo strict military training and are well-practiced in the usage of firearms, making them an essential part of the state's army. They serve as the counterbalance to the influential Qizilbash."
  estate_ghulams_ownership:1 "Ghilman Land Ownership"
@@ -1506,12 +1506,12 @@
  EST_VAL_ACCEPTS_CAUCASIAN_CULTURE_LOY:0 "Accepts Caucasian Cultures: §G$VAL$§!"
  EST_VAL_IS_CAUCASIAN_CULTURE:0 "Is Caucasian: §Y$VAL$%§!"
  EST_VAL_IS_CAUCASIAN_CULTURE_LOY:0 "Is Caucasian: §G$VAL$§!"
- ghulams_loyalty_modifier:1 "Ghilman Loyalty Equilibrium"
- ghulams_influence_modifier:1 "Ghilman Influence"
- ghulams_privilege_slots:1 "Ghilman Max Privileges"
- qizilbash_loyalty_modifier:0 "Qizilbash Loyalty Equilibrium"
- qizilbash_influence_modifier:0 "Qizilbash Influence"
- qizilbash_privilege_slots:0 "Qizilbash Max Privileges"
+ ghulams_loyalty_modifier:1 "グラーム階級の忠誠均衡値"
+ ghulams_influence_modifier:1 "グラーム階級の影響力"
+ ghulams_privilege_slots:1 "グラーム階級の特権最大数"
+ qizilbash_loyalty_modifier:0 "クズルバシュ階級の忠誠均衡値"
+ qizilbash_influence_modifier:0 "クズルバシュ階級の影響力"
+ qizilbash_privilege_slots:0 "クズルバシュ階級の特権最大数"
  persian_influence_mechanic:0 "ペルシアの影響力"
  ability_persian_influence_mechanic:0 "ペルシアの影響力"
  persian_influence:0 "ペルシアの影響力"
@@ -3793,15 +3793,15 @@
  mam_constantinople_title:0 "[151.GetName]の門"
  mam_constantinople_desc:0 "かつて強大だった帝国の首都が目の前にある。[151.GetName]の征服は、自国興隆の瞬間として歴史に残るだろう！"
  mam_tabriz_title:0 "[416.GetName]戦役"
- mam_tabriz_desc:0 "The house of a proud nomadic people, the shahs of Iran and horseriders of the east will make for a valuable addition to our illustrious and victorious military campaigns."
+ mam_tabriz_desc:0 "誇り高き遊牧民族の本拠地であり、イランのシャーや東方の騎乗りは、輝かしい勝利を収めた軍事作戦への貴重な戦力として役立つであろう。"
  mam_persia_title:0 "獅子と三日月"
- mam_persia_desc:1 "We cannot risk the rise of a powerful foe on our eastern border. To ensure that, we must swiftly make a move against them and secure their lands."
+ mam_persia_desc:1 "東部国境で強大な敵が台頭する危険を冒すことなどできない。そのためには、速やかに敵に対抗し、彼らの領土を確保せねばならない。"
  mam_unify_islam_title:0 "イスラム統一"
- mam_unify_islam_desc:0 "For centuries the world of Islam has remained shattered and in pieces. Our weakness has been exploited by external powers and divided we shall fall. It is up to our great armies to unite the Islamic world!"
+ mam_unify_islam_desc:0 "何世紀もの間、イスラム世界は粉々に砕け散ったままだった。自国の弱みに対して外部勢力からつけ込まれ、分裂した自国は没落するのだ。イスラム世界を統一するのは、自国の大軍隊次第だ！"
  mam_cultivate_the_delta_title:0 "デルタ地帯の耕作"
- mam_cultivate_the_delta_desc:0 "The connective river lines between the Nile and our Mediterranean coast are hosts to incredibly valuable and fertile land. We must invest in its continued prosperity!"
+ mam_cultivate_the_delta_desc:0 "ナイル川と地中海沿岸間を結ぶ河川網は、信じられないほど貴重で肥沃な土地を擁している。継続的に繁栄するよう投資せねばならない！"
  mam_aden_trade_title:0 "アデンでの存在感"
- mam_aden_trade_desc:0 "The western tip of Arabia in conjunction with the horn of Africa form natural anchorages, docks, and markets at a prestigious position for incoming and outgoing valuable trade. Expanding our influence in that area will surely be very profitable."
+ mam_aden_trade_desc:0 "アフリカの角と併せてアラビア西端は、貴重な貿易の出入りに有利な位置にあり、天然の停泊地、波止場、市場を形成しており、貴重な交易の輸入出に対して名高い地位にある。その地域で影響力を拡大することは、必ずや大きな利益をもたらすだろう。"
  mam_kashifs_egypt_title:0 "エジプトのカーシフ"
  mam_kashifs_egypt_desc:0 "The administration of Egypt is no easy task due to the vast size of our domain and the number of citizens within it. If we are to properly administer it, we will need properly organized local governorships."
  mam_center_arab_islamic_world_title:0 "イスラム世界の中心"
@@ -4114,15 +4114,15 @@
  sponsor_hajj_alert_tooltip:0 "ハッジ巡礼の申し込み"
  mam_export_grain_dialog: "Would you like to receive grain exports from the Mamluks?"
  mam_sponsor_hajj_dialog: "マムルーク主催の大ハッジに申し込みますか？"
- passive_effects_events.9.t: "The Estates Calm Down"
- passive_effects_events.9.desc: "The shock of the estates from the reminder that they are nothing but mere mortals in comparison to our ruler has finally died down. [This.GetName] should be now a more stable and peaceful province in our state for the foreseeable future."
- passive_effects_events.9.a: "Good"
+ passive_effects_events.9.t: "人々が落ち着く"
+ passive_effects_events.9.desc: "支配者に比べれば、自分たちはただの人間に過ぎないということを思い知らされた領民たちのショックは、ようやく収まった。[This.GetName]は、当分の間、我が国においてより安定した平和な州となるはずである。"
+ passive_effects_events.9.a: "よし。"
  BYZ_extra_forcelimit_for_pronoiars_tt:0 "宗主国がプロノイアの§Y扶養限界§!をアップグレードした"
  BYZ_army_trad_tt:0 "宗主国がプロノイアの§Y陸軍伝統§!をアップグレードした"
  BYZ_discipline_tt:0 "宗主国がプロノイアの§Y規律§!をアップグレードした"
  BYZ_pronoia_land_forcelimit_penalty_tt:0 "宗主国がプロノイアの§Y陸軍扶養限界の維持§!削除を選択した"
- estate_qizilbash_supremacy_over_the_aristocracy_qizilbash_name:0 "Supremacy over the Aristocracy"
- estate_qizilbash_supremacy_over_the_aristocracy_aswaran_name:0 "[Root.GetQizilbashOrFallbackName] Entitlement"
+ estate_qizilbash_supremacy_over_the_aristocracy_qizilbash_name:0 "貴族に対する優位性"
+ estate_qizilbash_supremacy_over_the_aristocracy_aswaran_name:0 "[Root.GetQizilbashOrFallbackName]の権利"
  estate_qizilbash_supremacy_over_the_aristocracy_desc_qizilbash:0 "The [Root.GetQizilbashOrFallbackName], [Root.GetNobilityOrFallbackName] and the [Root.GetGhulamsOrFallbackName] are all at odds with each other as they represent the military power within our state. Only one estate shall have the power to reign supreme and gain the favor of the [Root.GovernmentName]."
  estate_qizilbash_supremacy_over_the_aristocracy_desc_aswaran:0 "The [Root.GetQizilbashOrFallbackName] might be part of our [Root.GetNobilityOrFallbackName], but not every member of the [Root.GetNobilityOrFallbackName] is a proper warrior of the [Root.GetQizilbashOrFallbackName]. From now on, every nobleman should dedicate to the [Root.GetQizilbashOrFallbackName] cause, or have to pay a fine to the [Root.GetQizilbashOrFallbackName] in order to escape military service."
  estate_aswaran_desc:0 "Reborn from the ashes of the past and merged with the once powerful faction of the Shia Qizilbash, the Aswaran are once again the cavalry force and the backbone of our military. Although swearing allegiance to the true faith of Zoroastrianism, Islamic and Turkomen influences as well as political power within our state makes the once purely martial group into a considerable faction in our country."
