--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -257,7 +257,7 @@
  confucian_events.1.d:0 "[pagan_province.Religion.GetName]の国民を統一しようとする我々の努力は、ようやく成功し始めている。我々の異教徒の国民たちは儒教の思想を受け入れ始めており、我々の地方の権威はまた、より広い儒教思想の集積に、地方の宗教と文化の要素を統合した。地元の官僚たちが我々の統治に参加することで、異教徒の習慣はある程度広がり始めた。[Root.Capital.GetCapitalName]の有名な役人の間でさえ、小さな祭壇が[pagan_province.Religion.GetName]の万神殿として見出されるようになっている。\n異教は、我々の儒教の[Root.GovernmentName]における多くの宗教の一つとなっている。"
  confucian_events.1.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.2.t:0 "キリスト教の調和"
- confucian_events.2.d:0 "時の経過とともに、我々のキリスト教徒の国民たちは我々のやり方に慣れ、我々の儀式と優れた統治理念へと引き継がれた。かつて教育と統治のための古典と我々の制度に対する不信があったが、今では理解が広がっている。我々のキリスト教の国民たちは次々と取り入れられ、我々の[Root.GovernmentName]の一部となり、その習慣の一部は我々のものとなっている。[Root.Capital.GetCapitalName]では、最高の教育を受けた儒教の学者の一部にさえ、キリスト教の習慣や、キリスト教の教会を訪れるのを見ることができる。"
+ confucian_events.2.d:0 "時の経過とともに、我々のキリスト教徒の国民たちは我々のやり方に慣れ、我々の儀式と優れた統治理念へと引き継がれた。かつて教育と統治のための古典と我々の制度に対する不信があったが、今では理解が広がっている。我々のキリスト教の国民たちは次々と取り入れられ、我々の[Root.GovernmentName]の一部となり、その習慣の一部は我々のものとなっている。[Root.Capital.GetCapitalName]では、最高の教育を受けた儒教の学者の一部でさえ、キリスト教の習慣に参加し、キリスト教の教会を訪れるのを見ることができる。"
  confucian_events.2.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.3.t:0 "イスラムの調和"
  confucian_events.3.d:1 "イスラムは何世紀にもわたって我々の土地における少数派の宗教であった。しかし、時がたつにつれて、我々の社会のより一体化した部分へと成長した。ムスリムの思想は、我々の伝統、儀式、やり方と統合され、調和しており、我々は、宗教が自身の目的に適合するために提供すべきものを最大限活用してきた。[Root.Capital.GetCapitalName]の周辺の地区でさえ、イスラム教の学者、医者、商人、農場主、農民を見ることができる。彼らが我々の[Root.Monarch.GetTitle]に従っている限り、アッラーの信者は我々の社会の不可欠な一部である。"
@@ -275,7 +275,7 @@
  confucian_events.7.d:0 "時が経るにつれ日本人たちは、古くから信仰する神道に孔子と仏陀の伝承を取り入れてきた。外国の教えの中で最も真実に近く役立つものと感じ、それを自分のものとするようになった。このため、いろいろな意味で彼らの宗教が[Root.GetName]という概念の中に取り込まれ、調和することになったのも容易なことであった。時が経つにつれて、神道の独自性が問題になることも少なくなった。神道の信者たちは上流から下流まで[Root.GetAdjective]社会のどこにも見られるようになり、複雑な政府機構の中で新たな集団を形成しているが、部外者からは我々自身と区別するのは非常に困難だろう。"
  confucian_events.7.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.8.t:0 "上座部仏教の調和"
- confucian_events.8.d:0 "上座部仏教のパーリ仏典は、多くの点で、伝統を編成し、儒教のエリートに学ぶための見慣れた方法である。時の経過とともに、これらの法律や儀式の集まりが研究され、我々の社会で教育を受け、影響力のあるすべての人々が研究し、遵守しなければならない集積の一部となった。伝統は調和しており、幅広い上座部仏教の社会は、我々が国内の上座部仏教徒を我々の[Root.GovernmentName]の不可欠な一部とみなしているのと同じように、彼らを平等なものと見ている。"
+ confucian_events.8.d:0 "上座部仏教のパーリ仏典は多くの点で、儒教のエリートにとって、伝統と学習を組織するための見慣れた方法である。時の経過とともに、これらの法律や儀式の集まりが研究され、我々の社会で教育を受け、影響力のあるすべての人々が研究し、遵守しなければならない集積の一部となった。伝統は調和しており、幅広い上座部仏教の社会は、我々が国内の上座部仏教徒を我々の[Root.GovernmentName]の不可欠な一部とみなしているのと同じように、彼らを平等なものと見ている。"
  confucian_events.8.a:0 "「美徳ある人々に服従し、悟りで人々を同化させよ」"
  confucian_events.9.t:0 "大乗仏教の調和"
  confucian_events.9.d:0 "何世紀も前、仏陀の教えは我々の土地に浸透し始め、そして今、それは[Root.GetName]の中で最も広まった宗教の一つである。我々は、孔子の古典を[Root.GovernmentName]の指針としているが、仏陀の伝統と多くの国民たちが感じる永遠の循環の終わりを支持している。\n真に我々は大乗仏教の民によって支配された儒教国である。"
@@ -647,7 +647,7 @@
  shinto_events.29.d:0 "西洋との出会いは特に[Root.GetAdjective]にとっては非常に騒々しいものであった！西洋の交易商を歓迎する我々の努力は、ヨーロッパの文化と彼らの商品への良い繋がりに対する比類なき洞察力をもたらした。意欲的な国人や他の影響力ある者は、西洋人から直接学ぶために子息をヨーロッパに送り始めており、我々が母国にて多くを利用できるよう、できるだけ多くのものを明らかにすることを試みている。"
  shinto_events.29.a:0 "OK"
  shinto_events.30.t:0 "西洋との交易"
- shinto_events.30.d:0 "時の経過とともに、西洋との交易収入は当初の高値から減少したが、遠く離れた旅行者からの商品や思想の流入は、かつてのそれから社会を変化させている。これらの遠く離れた旅行者の理想をどの程度まで同化することができるかについては、時だけが教えてくれるだろう。"
+ shinto_events.30.d:0 "時が経つにつれ、西洋との交易収入は当初の最高値からは減少したが、遠く離れた旅行者からもたらされる商品や思想の流入は、依然として我々の社会をかつてものもとは変えている。これら遠く離れた旅行者の理想を、我々がどの程度まで同化することができるのかは、時間が経ってみないと分からないだろう。"
  shinto_events.30.a:0 "OK"
  shinto_events.31.t:0 "鎖国？"
  shinto_events.31.d:0 "我々は、西洋の交易商の社会への影響を制限するため強制的な行動を取った。すべての繋がりを完全に切り捨てようとすると密輸につながる可能性があるが、我々は交易商を単一の港に制限し、その地点以外の外の世界との交流を大きく規制している。このようにして、我々は破壊的な宗教的試みや陰謀の危険性を制限しながら、我々が取得したい商品（そして銃）に参加することができる。"
