--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1264,8 +1264,8 @@
  desc_horn_africa_ambition:0 "アフリカ周辺の沿岸諸島の支配は、我々に重要な戦術的利点をもたらしている。"
  por_makeshift_defenses:1 "西の要塞"
  desc_por_makeshift_defenses:1 "西方の軍によるこの州の占領は、その地の地政学に永続的な影響を与えた。"
- eng_irish_revolts:0 "アイルランドの怒り"
- desc_eng_irish_revolts:0 "アイルランドの住民は、イングランドの君主に憤慨するかもしれないが、彼らは確かにどのように仕事に励むかを理解している。"
+ eng_irish_revolts:0 "アイルランドの癇癪"
+ desc_eng_irish_revolts:0 "アイルランド住民は、イングランド人支配者に憤慨するかもしれないが、懸命に働く術を知っているのは確かだ。"
  eng_culture_mission:0 "文化受容"
  desc_eng_culture_mission:0 "ゲール族の異教徒たちは放置しておけば、我々の生活様式を腐敗させるだろう。彼らに同等の地位が有ると思わせておくのが良いだろう。"
  eng_french_recovery:0 "勝者の譲歩"
