--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -334,7 +334,7 @@
  flavor_kon.7.desc.pap:0 "年配の男性の一団が、自国の海岸線にやって来ました。彼らは皆、長くて白い衣を身にまとい、変な帽子をかぶっています。彼らは「教皇」の名でここに来たと主張し、我が[Root.Monarch.GetTitle]との謁見を求めています。どうやらこの者たちは「[PAP.GetName]」という国からの司教で、「キリスト」の言葉を広めるためにここへ来たようです。彼らが何を言っているのかは誰にも分からないのですが、彼らの技術は自国よりずっと進んでいるようですし、彼らの信仰は[Root.Monarch.GetName]も[Root.GetNobilityOrFallbackName]も同じように好奇心をそそるものです。"
  flavor_kon.7.desc.catholic:1 "茶色の長い衣を着て、奇妙な金色の十字架を持った者たちが自国の海岸にやって来ました。彼らは「あなた方を正しい道に導く」ためにやって来たのだと主張し、[Root.Monarch.GetName]への謁見を求めています。彼らは自らを「ローマ・カトリック教会の宣教師」と名乗っています。その意味を理解している者は誰もいませんが、彼らの技術は興味を引かれるものです。"
  flavor_kon.7.desc.christian:1 "自国の海岸でで小さな船が座礁しました。何人かの戦士が注意深くその船に近づくと、茶色の衣を着た5人の疲れ切った男たちがいました。服装からして、まるで生きたまま焼かれようとしていたかのようで、辛うじて深刻な身体的損傷を受けずに済んだようです。この青白い男たちの発見が国民の注目を集めたため、彼らは[Root.Monarch.GetName]の元へと連れてこられました。どうも彼ら「宣教師」たちは迫害をされていた者たちのようで、「プロテスタント」の異端者たちの攻撃を受けていました。彼らは自分の技術や宗教について語り、自国の上流階級の注目を集めました。"
- flavor_kon.7.desc.others:1 "ボロボロの衣をまとい、重症を負っている3人の男が自国の海岸に流れつきました！数人の住民がすぐに彼らのところに行き、傷の手当てをしました。数週間後、彼らは再び立ち上がることができるようになり、自分たちの故郷について語ってくれましたー邪悪な力によってどのようにして自分たちの故郷が破壊されたのかを。また、彼らの宗教である「カトリック」について、簡単に参加する方法について話してくれました。彼らの宗教や技術に関する話は、[Root.Monarch.GetName]の片眉をつり上げさせましたが、最終的には興味を惹かせました。"
+ flavor_kon.7.desc.others:1 "ボロボロの衣をまとい、重症を負っている3人の男が自国の海岸に流れつきました！数人の住民がすぐに彼らのところに行き、傷の手当てをしました。数週間後、彼らは再び立ち上がることができるようになり、自分たちの故郷について語ってくれましたー邪悪な力によってどのようにして自分たちの故郷が破壊されたのかを。また、彼らの宗教である「カトリック」について、簡単に参加する方法について話してくれました。彼らの宗教や技術に関する話は、[Root.Monarch.GetName]の片眉をつり上げ疑わせましたが、最終的には[Root.Monarch.GetHerHis]の興味を惹かせました。"
  flavor_kon.7.a:0 "この外国人を招いて、しばらく滞在してもらえ。"
  flavor_kon.7.a.tt:1 "ヨーロッパ側に立ちます。\n[Root.GetName]では「呪物崇拝」から「§Yカトリック§!」のミッションに置き換わります。"
  flavor_kon.7.b:0 "あいつらの動機がいいものなわけがない。あいつらをすぐに自国から追放しろ！"
