--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -17,8 +17,8 @@
  COLONIAL_SUBJECTS:0 "植民地$LIST$を支配している"
  COLONIAL_SUBJECT_OF:0 "$LORD$の植民地"
  SUBJECT_COLONY_TARIFF_EFFICIENCY:0 "関税効率は§Y$VAL$%§!$VAL2$です。"
- SUBJECT_COLONY_TARIFF:1 "関税効率は§Y$NAME$§!の生産と交易の半分に適用され、それは$INC|Y$¤になる訳ですから、彼らは毎月私たちに§Y$VAL$§!¤支払っています。"
- SUBJECT_COLONY_TARIFF_DESC:1 "植民地は関税率に基づき、関税として生産と交易の収入の半分の一部を払う。関税率を増やすことも可能だが政府に反抗的な者達をも増やすことになるやもしれない。"
+ SUBJECT_COLONY_TARIFF:1 "関税効率は§Y$NAME$§!の生産と交易（$INC|Y$¤ダカット）の半分に適用されます。つまり、彼らは毎月§Y$VAL$§!¤支払っています。"
+ SUBJECT_COLONY_TARIFF_DESC:1 "植民地は関税効率に基づき、関税として生産収入・交易収入の半分の一部を払います。関税を増やすこともできますが政府に反抗的な者達をも増やすことになりかねません。"
  SUBJECT_INCOME:0 "§Y$NAME$§!は我々に毎月§Y$VAL$§!¤を支払います。"
  SUBJECT_INCOME_DESC:0 "あなたの$TYPES$はあなたへの毎月の税の内、$VALUE|Y$を支払うよう要求されます。"
  SUBJECT_NO_INCOME_DESC:0 "$TYPES$は我々に一銭たりとも税を支払いません。"
