--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -522,15 +522,15 @@
  babbling_buffoon_personality_die_desc:0 "我々の友人は、この日を大切にします。"
  embezzler_personality_die_desc:0 "会計官たちは[Root.Monarch.GetHerHim]を惜しまないでしょうが、[Root.Monarch.GetHerHis]の甥たちは間違いなく惜しむことでしょう。"
  infertile_personality_die_desc:0 "我々は、[Root.Monarch.GetHerHis]の後継者が王朝を存続し続けるために、より多くを尽くすことだけを願っています。"
- drunkard_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の酩酊と高い味覚は、[Root.Monarch.GetSheHe]が戴冠した時よりも国を貧しく酷い統治にしていった。"
- sinner_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の罪深い人生はただ我が国に恥をもたらすだけです。"
+ drunkard_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の大酒飲みとグルメ志向は、[Root.Monarch.GetSheHe]が戴冠した時よりも国を貧しく酷い統治にしていった。"
+ sinner_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の罪深い人生は、我が国に恥辱以外の何物ももたらさなかった。"
  greedy_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の金と富へのあらゆる消費欲は見逃されるべきではありません。"
  tolerant_personality_die_desc:0 "我々の宗教的少数派は、偉大な寛容の性格を持つ[Root.Monarch.GetHerHis]が去ったことを嘆くでしょう。"
- cruel_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の邪悪な好意は来るべき世代のために記憶されなければなりません。"
- naive_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の外交における単純な干渉は、誤解や新たな敵をもたらしただけでした。"
+ cruel_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の悪行は、今後何世代にもわたって記憶されるだろう。"
+ naive_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の外交における稚拙な干渉は、誤解や新たな敵をもたらしただけでした。"
  craven_personality_die_desc:0 "戦場におけるあの方の臆病な行為は、永遠にあの方の遺産となるに違いありません。"
- loose_lips_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の秘密情報の不注意な処理により、我々の機密は公共の知識となりました。"
- obsessive_perfectionist_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]は常に全ての建築計画に干渉して、我が国に本来は必要でなかったであろう費用の長い表を残していった。"
+ loose_lips_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]の秘密情報の不注意な取り扱いにより、我々の機密は公に知られることとなった。"
+ obsessive_perfectionist_personality_die_desc:0 "[Root.Monarch.GetHerHisCap]があらゆる建築計画に干渉し続けた結果、我が国には見逃すことができない長い出費リストが残った。"
  malevolent_personality_die_desc:0 "我々の国民は[Root.Monarch.GetHerHis]の悪意に満ちた恐怖の治世が終わったことを知り、ほっとしている。"
  conqueror_personality_die_desc:0 "我々の敵はきっと、[Root.Monarch.GetHerHis]の逝去によって救われるでしょう。"
  no_personality_die_desc:0 "[GetSheHeCap]は重要なことの多くを達成できずに、あまりにも早く死去しました。"
@@ -543,10 +543,10 @@
  master_of_arms_personality_die_desc:0 "[GetHerHisCap]の歩兵隊の騎乗兵は[GetHerHim]を自身の一部であったかのように悼んでいます。"
  goal_oriented_personality_die_desc:0 "[GetHerHisCap]の時宜を得た到着は多くの戦闘を救いました。"
  hardy_warrior_personality_die_desc:0 "[GetHerHisCap]の存在は、最悪の苦境を和らげてくれるようでした。"
- siege_specialist_personality_die_desc:0 "[GetHerHisCap]の包囲技術へのこだわりは、あらゆる投資を価値あるものとしました。"
+ siege_specialist_personality_die_desc:0 "[GetHerHisCap]の包囲技術へのこだわりは、あらゆる包囲戦の効果を高めました。"
  cannoneer_personality_die_desc:0 "砲兵隊は[GetHerHis]の死を[GetSheHe]が自身の一部であったかのように悼んでいます。"
  extortioner_personality_die_desc:0 "[GetHerHisCap]の崩御は、我々を除くあらゆる国籍の交易商たちを大いに喜ばせるでしょう。"
- ruthless_blockader_personality_die_desc:0 "海岸全域の港湾の市民は今や、より簡単に呼吸することができます。"
+ ruthless_blockader_personality_die_desc:0 "沿岸全域の港の市民は、これで一息つくことができます。"
  buccaneer_personality_die_desc:0 "[GetHerHim]がいなくなれば、敵は再び航路を確保して安心するでしょう。"
  prize_hunter_personality_die_desc:0 "[GetHerHisCap]の勇気ある功績は、多くの新しい船を賞品として我々の手にもたらしました。"
  ironside_personality_die_desc:0 "[GetHerHisCap]の守備戦術への強い信念は、[GetHerHis]の指揮の下にいたすべての人に強い印象を残しました。"
